# advent_of_code

./: readme.md
aoc2015/: Cargo.toml
aoc2015/src/day01/: day01.rs  readme.md
aoc2015/src/day02/: day02.rs  readme.md
aoc2015/src/day03/: day03.rs  readme.md
aoc2015/src/day04/: day04.rs  readme.md
aoc2015/src/day05/: day05.rs  readme.md
aoc2015/src/day06/: day06.rs  readme.md
aoc2015/src/day07/: day07.rs  readme.md
aoc2022/: Cargo.toml
aoc2022/src/day01/: day01.rs  readme.md
aoc2022/src/day02/: day02.rs  readme.md
aoc2022/src/day03/: day03.rs  readme.md
aoc2022/src/day04/: day04.rs  readme.md
aoc2022/src/day05/: day05.rs  readme.md
aoc2022/src/day06/: day06.rs  readme.md
aoc2022/src/day07/: day07.rs  readme.md
