[package]
name = "aoc2015"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan Kocevar <jonathan.kocevar@gmail.com>"]

[[bin]]
name = "day01"
path = "src/day01/day01.rs"

[[bin]]
name = "day02"
path = "src/day02/day02.rs"

[[bin]]
name = "day03"
path = "src/day03/day03.rs"

[[bin]]
name = "day04"
path = "src/day04/day04.rs"

[[bin]]
name = "day05"
path = "src/day05/day05.rs"

[dependencies]
md-5 = "0.10.5"